# stronglifts

./: .gitignore  README.md  build.sh  package-lock.json  package.json
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
